tests/aster/x/mochi/rosetta/dijkstras-algorithm.error
error[A007]: map entry type mismatch
  --> /workspace/mochi/tests/rosetta/x/Mochi/dijkstras-algorithm.mochi:51:25

 51 |   return {"dist": dist, "prev": prev}
    |                         ^

help:
  Ensure map keys and values share types
